# email-triage-openenv-environment

./: .env  .gitignore  .hfignore  Dockerfile  PROJECT_BLOG.md  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
agents/: classifier_agent.py  random_agent.py  rule_based.py  scheduler_agent.py
app/: dashboard.py  env.py  features.py  generator.py  graders.py  logger.py  main.py  memory.py  models.py  reward.py  self_improvement.py  state.py  tasks.json  tasks.py
baseline/: run_baseline.py
data/: emails.json
demo/: demo_script.md  run_demo.py
email_triage_openenv.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
notebooks/: Multi_Agent_Self_Learning_Email_Triage_OpenEnv_Final_Submission_Colab.ipynb
server/: app.py
training/: evaluate.py  state_encoder.py  train_ppo.py
training/checkpoints/: curriculum_log.txt  episode_rewards.csv  ppo_email_triage.pt
visualization/: compare_agents.py  dashboard.py  plot_curriculum.py  plot_rewards.py
