[project]
name = "email-triage-openenv"
version = "0.1.0"
description = "RL-based Email Triage Environment with FastAPI for classification, prioritization, and response generation"
authors = [
    { name = "Vishal Gulati" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi==0.110.0",
    "uvicorn[standard]==0.29.0",
    "pydantic==2.6.4",
    "requests==2.31.0",
    "python-dotenv==1.0.1",
    "openai==1.30.1"
]

# Optional but recommended
[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
    "black",
    "flake8"
]

# Build system (required for validator)
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"