[project]
name = "email-triage-openenv"
version = "0.1.0"
description = "RL-based Email Triage Environment using FastAPI"
authors = [
    { name = "Vishal Gulati" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi==0.110.0",
    "uvicorn[standard]==0.29.0",
    "pydantic==2.6.4",
    "requests==2.31.0",
    "python-dotenv==1.0.1",
    "openai==1.30.1",
    "openenv-core>=0.2.0"
]

# Explicitly list all Python packages (exclude non-code folders)
[tool.setuptools]
packages = ["app", "server", "baseline"]

# REQUIRED ENTRYPOINT
[project.scripts]
server = "server.app:main"

# BUILD SYSTEM
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

