[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "email-triage-openenv"
version = "0.1.0"
description = "Multi-agent RL environment for enterprise email triage"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn==0.30.6",
  "pydantic==2.9.2",
  "torch==2.5.1",
  "matplotlib==3.9.2",
  "streamlit==1.39.0",
  "pandas==2.2.3",
  "numpy==2.1.2",
  "python-dotenv==1.0.1"
]

[tool.setuptools]
packages = ["app", "agents", "training", "visualization", "demo", "baseline"]

[tool.uv]
dev-dependencies = []